# cbir-engine

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.override.yml.example  docker-compose.siglip.yml  docker-compose.yml
ai-service/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
ai-service/ai_service/: __init__.py  main.py
ai-service/ai_service/application/: errors.py  ports_rerank.py
ai-service/ai_service/application/dto/: __init__.py
ai-service/ai_service/application/ports/: __init__.py
ai-service/ai_service/application/use_cases/: bundle.py  embeddings.py  reranking.py
ai-service/ai_service/domain/value_objects/: __init__.py
ai-service/ai_service/entrypoint/composition_root/: __init__.py
ai-service/ai_service/infrastructure/config/: __init__.py
ai-service/ai_service/infrastructure/embedding/: __init__.py  local_embedder.py  model_adapters.py  phash.py
ai-service/ai_service/infrastructure/reranking/: __init__.py
ai-service/ai_service/interface_adapters/controllers/: __init__.py
ai-service/ai_service/interface_adapters/presenters/: __init__.py
ai-service/tests/: conftest.py  test_api.py  test_local_embedder.py  test_model_adapters.py
docs/: AI_PIPELINE_UPGRADE.md  ARCHITECTURE.md  (+14 more)
hello-world-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
hello-world-service/app/: main.py
hello-world-service/tests/: test_health.py
infra/ci/quality-gates/: README.md  eval_set.json  pyproject.toml  retrieval_quality.py
infra/ci/quality-gates/tests/: test_retrieval_quality.py
sdks/python-sdk/: README.md  pyproject.toml
sdks/python-sdk/cbir/: __init__.py  client.py  errors.py  models.py
sdks/python-sdk/tests/: test_client.py
services/auth-service/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
services/auth-service/auth_service/: __init__.py  main.py
services/auth-service/auth_service/application/: errors.py
services/auth-service/auth_service/application/dto/: __init__.py
services/auth-service/auth_service/application/ports/: __init__.py
services/auth-service/auth_service/application/use_cases/: api_keys.py  bundle.py  credentials.py  tenants.py  tokens.py
services/auth-service/auth_service/domain/domain_services/: __init__.py
services/auth-service/auth_service/domain/entities/: __init__.py
services/auth-service/auth_service/domain/repository_interfaces/: __init__.py
services/auth-service/auth_service/domain/value_objects/: __init__.py
services/auth-service/auth_service/entrypoint/composition_root/: __init__.py
services/auth-service/auth_service/infrastructure/config/: __init__.py
services/auth-service/auth_service/infrastructure/persistence/: __init__.py
services/auth-service/auth_service/infrastructure/ratelimit/: __init__.py
services/auth-service/auth_service/infrastructure/security/: __init__.py
services/auth-service/auth_service/interface_adapters/controllers/: __init__.py
services/auth-service/auth_service/interface_adapters/gateways/: __init__.py
services/auth-service/auth_service/interface_adapters/mappers/: __init__.py
services/auth-service/auth_service/interface_adapters/presenters/: __init__.py
services/auth-service/tests/: conftest.py  test_api.py  test_domain.py
services/catalog-service/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
services/catalog-service/catalog_service/: __init__.py  main.py
services/catalog-service/catalog_service/application/: errors.py
services/catalog-service/catalog_service/application/dto/: __init__.py
services/catalog-service/catalog_service/application/ports/: __init__.py
services/catalog-service/catalog_service/application/use_cases/: bundle.py  feedback.py  items.py
services/catalog-service/catalog_service/domain/entities/: __init__.py
services/catalog-service/catalog_service/domain/repository_interfaces/: __init__.py
services/catalog-service/catalog_service/domain/value_objects/: __init__.py
services/catalog-service/catalog_service/entrypoint/composition_root/: __init__.py
services/catalog-service/catalog_service/infrastructure/config/: __init__.py
services/catalog-service/catalog_service/infrastructure/messaging/: __init__.py
services/catalog-service/catalog_service/infrastructure/object_storage/: __init__.py
services/catalog-service/catalog_service/infrastructure/persistence/: __init__.py
services/catalog-service/tests/: conftest.py  test_api.py  test_feedback.py  test_ingestion.py
services/query-service/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/query-service/query_service/: __init__.py  main.py
services/query-service/query_service/application/: errors.py
services/query-service/tests/: conftest.py  test_api.py  test_search_service.py
shared/common-libs/: pyproject.toml  requirements-dev.txt
shared/common-libs/cbir_common/: __init__.py  http.py  structured_logging.py
shared/common-libs/cbir_common/auth/: __init__.py  context.py  fastapi_dependency.py  jwt_contract.py
shared/common-libs/cbir_common/observability/: __init__.py
shared/common-libs/cbir_common/vectordb/: __init__.py
shared/common-libs/tests/: test_http.py  test_jwt_contract.py  test_observability.py  test_vectordb.py
shared/domain-kernel/: pyproject.toml
shared/domain-kernel/cbir_domain_kernel/: __init__.py
shared/domain-kernel/tests/: test_tenant_id.py
tests/e2e/: README.md  conftest.py  pyproject.toml  requirements-dev.txt
tests/e2e/ingestion_to_search/: test_storage_roundtrip.py
tests/e2e/multi_tenancy_isolation/: test_isolation.py
workers/ingestion-worker/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
workers/ingestion-worker/ingestion_worker/: __init__.py  adapters.py  config.py  dedup.py  main.py  metrics.py  models.py  ports.py  processor.py  runner.py
workers/ingestion-worker/tests/: conftest.py  test_processor.py  test_runner.py
(+71 files in other folders)
