[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cbir"
version = "0.1.0"
description = "Official Python SDK for the CBIR Engine — ingest images and search by image/text/composition."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9.0", "ruff>=0.7,<1.0"]

[tool.setuptools.packages.find]
include = ["cbir*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
