[project]
name = "auth-service"
version = "0.1.0"
description = "CBIR auth-service: tenant identity, API key lifecycle, token issuance, rate limiting (Milestone 2)."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["auth_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
