[project]
name = "catalog-service"
version = "0.1.0"
description = "CBIR catalog-service: data layer & storage foundation (Milestone 3)."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends()/Query() are designed to be called in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.isort]
known-first-party = ["catalog_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
