[project]
name = "query-service"
version = "0.1.0"
description = "CBIR query-service: image/text/compositional search (Milestones 7-9)."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File", "fastapi.Form"]

[tool.ruff.lint.isort]
known-first-party = ["query_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
