[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cbir-common"
version = "0.1.0"
description = "Cross-cutting technical utilities shared by CBIR services: structured logging, the platform JWT contract, and gateway-style request authentication. No business logic lives here — see docs/CLEAN_ARCHITECTURE.md Section 5."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "PyJWT>=2.9,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9.0", "ruff>=0.7,<1.0"]

[tool.setuptools.packages.find]
include = ["cbir_common*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
