[project]
name = "ingestion-worker"
version = "0.1.0"
description = "CBIR ingestion-worker: async dedup/embed/index pipeline (Milestone 4)."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["ingestion_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
