[project]
name = "cbir-quality-gates"
version = "0.1.0"
description = "Retrieval-quality regression gate (Recall@K / nDCG / MRR) for CI."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
